--- a/index.html
+++ b/index.html
@@ -2,21 +2,204 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-        crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class=" bg-black container w-50% p-5 mt-5 text-white border border-warning border-5">
-        <h1 >LUMINAR TECHNOLAB</h1>
-        <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, debitis impedit dolore dolorum eveniet
-            temporibus sunt praesentium ducimus at laboriosam, nisi laborum quam nemo sapiente accusamus. Vel quo
-            accusamus fuga?</p>
-        <button class="btn btn-info">veiw more</button>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <img src="./images/download.jpg" alt="">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse container" id="navbarNav" style="font-size: small;">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">COURSES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ">OUR PLACEMENTS</a>
+          <li class="nav-item">
+            <a class="nav-link ">GALLERY</a>
+          <li class="nav-item">
+            <a class="nav-link ">CONTACT</a>
+          </li>
+        </ul>
+
+      </div>
     </div>
+  </nav>
+  <main>
+    <div id="carouselExampleCaptions" class="carousel slide bg-black" style="height: 75vh">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" style="height: 75vh">
+          <img src="./images/never-stop-learning-3653430_1280.jpg" class="d-block w-100" alt="" style="opacity: 50%" />
+
+          <div class="carousel-caption text-start" style="top: 20vh">
+            <h1 class="fs-2%">
+              Kerala's No.1 IT Finishing School<br />100% Placement Assistance
+            </h1>
+            <p class="fs-5" style="width: 65%">
+              We at LUMINAR TECHNOLAB offers best software training and
+              placement in emerging technologies like BIG DATA, Data Science,
+              Machine Learning,PYTHON, Software Testing.
+            </p>
+            <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
+              VIEW COURSES
+            </button>
+          </div>
+        </div>
+        <div class="carousel-item" style="height: 75vh">
+          <img src="./images/WhatsApp Image 2023-07-09 at 23.24.21.jpg" class="d-block w-100" style="opacity: 50%"
+            alt="" />
+          <div class="carousel-caption d-none d-md-block text-start" style="top: 10vh">
+            <h1>
+              Data Science, ML &amp; AI<br />
+              Big Data - Hadoop &amp; Spark <br />
+              Python Data Science
+            </h1>
+            <p class="fs-5" style="width: 65%">
+              We LUMINAR TECHNOLAB offers best software training and placement
+              in emerging technologies like Big Data, Hadoop, Spark,Data
+              Scince, Machine Learning, Deep Learning and AI.
+            </p>
+            <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
+              VIEW COURSES
+            </button>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="container mt-2">
+      <button type="button" class="btn btn-lg btn-primary rounded-0 w-30px" data-bs-toggle="modal"
+        data-bs-target="#exampleModal" style="background-color: #5e068a; border: none">
+        sign up
+      </button>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <h3>Get Training Quote for free</h3>
+            <form action="">
+              <input type="text" placeholder="Name" class="form-control" />
+              <hr />
+              <input type="email" placeholder="Email" class="form-control" />
+              <hr />
+              <input type="tel" placeholder="Phone" class="form-control" />
+              <hr />
+              <select name="current_status" required="" class="form-select rounded-0 mb-3">
+                <option selected="true" disabled="disabled">
+                  Select Course interested in
+                </option>
+                <option>
+                  Data Science - ML - AI - Big Data with Cloud &amp; Tableau
+                </option>
+                <option>
+                  Python Django - Angular- Full Stack Web Development Expert
+                </option>
+                <option>Software Testing Specialist</option>
+                <option>
+                  MEARN Stack Web Development Expert - Angular &amp; React
+                </option>
+                <option>Business Analytics - Power BI &amp; Tableau</option>
+                <option>
+                  Android Developer Expert Training In Kochi- Flutter
+                </option>
+                <option>
+                  PYTHON -DATA SCIENCE with ML - AI - &amp; TABLEAU
+                </option>
+              </select>
+              <input type="text" placeholder="City" class="form-control" />
+              <hr />
+              <textarea name="comment" id="comment" cols="30" rows="5" placeholder="Comment"
+                class="form-control mb-3"></textarea>
+              <button type="submit" class="btn btn-primary rounded-0" style="background-color: #5e068a; border: none">
+                SUBMIT
+              </button><br>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main> <br>
+
+  <div class="row bg-white text-center">
+    <div class="col-lg-7">
+      <h1 style="color: purple;">LUMINAR TECHNOLAB PVT LTD </h1><br>
+      <p style="font-size: larger;" class="">Luminar Technolab is an IT Finishing School located near Infopark - Cochin,
+        focused on providing advanced level
+        software training to Students and by helping them to get placed in IT companies. We are a team of IT
+        professionals who have experience in IT sector for more than 15 plus years. Our fresher’s career foster programs
+        are Big Data Training, Data Science Training, Data Analytics Training, Python Training, Software Testing
+        Training & Selenium Training in Cochin, Kerala are designed in such a way to match with the current industry
+        requirements. Our Vision is to provide 100% placements to students those who enroll with us for our specialized
+        courses.</p><br>  <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
+          lean more
+        </button>
+    </div>
+    <div class="col-lg-5">
+      <img src="./images/qq.jpg" alt="">
+    </div>
+  </div><br><br><br><br>
+<h1 class="container text-center mt-5" style="color: #5e068a;">OUR <span style="color:rgb(196, 120, 196);">COURSES</span></h1>
+  <div class="row ">
+    <div class="col-lg-6 col-md-4 col-sm-6 text-black border">
+      <img id="width" src="./images/data-science-1588143159.jpg" alt="">
+    </div><br>
+    <div class="col-md-6">
+      <div class="second-col">
+        <h3 style="color: #5e068a;"> Data Science - ML - AI - Big Data with Cloud & Tableau</h3>
+        <br>
+        <p>
+          Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine Learning,
+          Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud.
+        </p>
+        <p>
+          📅 Next Batch : Jan 03rd 2022 (09:30 am - 11:30 am) <br><br>
+
+⏰ Duration: 6 Months, 5-6 Days a Week, 2-3 Hours/day <br><br>
+
+🧑‍🏫 Course Fees: VIEW MORE
+        </p>
+       
+      </div>
+
+    </div>
+  </div>
 </body>
 
 </html>
