--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -11,21 +10,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-=======
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
->>>>>>> 716f63120ce7cecd3c13f37d78f52ffd4e84e109
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./luminar.css">
 </head>
 
 <body>
-<<<<<<< HEAD
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="w-100" style="background-color: #5e068a;">
+    <p style="color: white;">have any questions</p>
+  </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <img src="./images/download.jpg" alt="">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -169,82 +169,81 @@
     </div>
   </main> <br>
 
-  <div class="row bg-white text-center">
+  <div class="row bg-white">
     <div class="col-lg-7">
-      <h1 style="color: purple;">LUMINAR TECHNOLAB PVT LTD </h1><br>
-      <p style="font-size: larger;" class="">Luminar Technolab is an IT Finishing School located near Infopark - Cochin,
-        focused on providing advanced level
-        software training to Students and by helping them to get placed in IT companies. We are a team of IT
-        professionals who have experience in IT sector for more than 15 plus years. Our fresher’s career foster programs
+      <h1 id="p2" style="color: purple; ">LUMINAR TECHNOLAB PVT LTD </h1><br>
+      <p id="p1">Luminar Technolab is an IT Finishing School located near Infopark - Cochin,
+        focused on providing advanced level software training to Students and by helping them to get placed in IT
+        companies. We are a team of IT professionals who have experience in IT sector for more than 15 plus years. Our
+        fresher’s career foster programs
         are Big Data Training, Data Science Training, Data Analytics Training, Python Training, Software Testing
         Training & Selenium Training in Cochin, Kerala are designed in such a way to match with the current industry
         requirements. Our Vision is to provide 100% placements to students those who enroll with us for our specialized
-        courses.</p><br>  <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
-          lean more
-        </button>
+        courses.</p>
+      <br> <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
+        lean more
+      </button>
     </div>
     <div class="col-lg-5">
       <img src="./images/qq.jpg" alt="">
     </div>
-  </div><br><br><br><br>
-<h1 class="container text-center mt-5" style="color: #5e068a;">OUR <span style="color:rgb(196, 120, 196);">COURSES</span></h1>
-  <div class="row ">
-    <div class="col-lg-6 col-md-4 col-sm-6 text-black border">
-      <img id="width" src="./images/data-science-1588143159.jpg" alt="">
-    </div><br>
-    <div class="col-md-6">
-      <div class="second-col">
-        <h3 style="color: #5e068a;"> Data Science - ML - AI - Big Data with Cloud & Tableau</h3>
-        <br>
-        <p>
-          Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine Learning,
-          Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud.
-        </p>
-        <p>
-          📅 Next Batch : Jan 03rd 2022 (09:30 am - 11:30 am) <br><br>
+  </div><br><br>
 
-⏰ Duration: 6 Months, 5-6 Days a Week, 2-3 Hours/day <br><br>
-
-🧑‍🏫 Course Fees: VIEW MORE
-        </p>
-       
+  <div class="container bg-light">
+    <h1 class="text-center" style="color: #5e068a;">OUR<span style="color: #7f489b;"> COURSES</span></h1><br>
+    <div class="row">
+      <div class="col-lg-6">
+        <img id="i1" src="./images/data-science-1588143159.jpg" alt="">
       </div>
-
+      <div class="col-lg-6">
+        <h2 style="color: #5e068a;" >DATA SCIENCE - ML - AI - BIG DATA WITH CLOUD & TABLEAU</h2>
+        <p>Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine Learning,
+          Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud.</p>
+          <p>📅 Next Batch : Jan 03rd 2022 (09:30 am - 11:30 am) <br><br>
+            ⏰ Duration: 6 Months, 5-6 Days a Week, 2-3 Hours/day <br><br>
+            🧑‍🏫 Course Fees: VIEW MORE</p>
+      </div>
+    </div>
+  </div><br><br>
+<div class="container">
+    <div class="row">
+      <div class="col-lg-4   card-hover">
+  <div class="card" style="height: 100%; width:100%;">
+    <img src="./images/python-1588143191.jpg" class="card" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="color: #5e068a;">Python Django - Angular- Full Stack Web Development Expert</h5>
+      <p class="card-text">
+        Core Python, Basics of Programming, Unix Commands, Advanced Python, Django Framework, REST API, Git, Angul...</p>
+      <a href="#" class="btn btn-primary">view more</a>
     </div>
   </div>
-=======
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <img src="./images/download.jpg" alt="">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse container" id="navbarNav" style="font-size: small;">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">COURSES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link ">OUR PLACEMENTS</a>
-                    <li class="nav-item">
-                        <a class="nav-link ">GALLERY</a>
-                    <li class="nav-item">
-                        <a class="nav-link ">CONTACT</a>
-                    </li>
-                </ul>
+      </div>
 
-            </div>
+      <div class="col-lg-4  card-hover">
+  <div class="card" style="height: 100%; width:100%;">
+    <img src="./images/st-1588580359.jpg" class="card" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="color: #5e068a;"> Software Testing Specialist</h5>
+      <p class="card-text">
+        Manual Testing, Java foundations, Mobile Testing, Selenium IDE, Selenium Web driver, Selenium Advanced Web...</p><br>
+      <a href="#" class="btn btn-primary">view more</a>
+    </div>
+  </div>
+      </div>
+        <div class="col-lg-4 card-hover ">
+  <div class="card" style="height: 100%; width:100%;">
+    <img src="./images/ms-1623825586.jpg" class="card" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="color: #5e068a;">MEARN Stack Web Development Expert - Angular & React</h5>
+      <p class="card-text">
+        HTML, CSS, Javascript, Bootstrap, Git, Typescript, MongoDB, MySQL, Express.JS, Angular, React.js and Node...</p>
+      <a href="#" class="btn btn-primary">view more</a>
+    </div>
+  </div>
         </div>
-    </nav>
-
->>>>>>> 716f63120ce7cecd3c13f37d78f52ffd4e84e109
-</body>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
