--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,39 +10,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./luminar.css">
 </head>
-
 <body>
-  <div class="w-100" style="background-color: #5e068a;">
+ <div class="w-100" style="background-color: #5e068a;">
+  <div class="row">
     <p style="color: white;">have any questions</p>
   </div>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-
-</head>
-
-<body>
-
+ </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-
     <img src="./images/download.jpg" alt="">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -184,7 +161,6 @@
       </div>
     </div>
   </main> <br>
-
   <div class="row bg-white">
     <div class="col-lg-7">
       <h1 id="p2" style="color: purple; ">LUMINAR TECHNOLAB PVT LTD </h1><br>
@@ -223,7 +199,7 @@
   </div><br><br>
 <div class="container">
     <div class="row">
-      <div class="col-lg-4   card-hover">
+      <div class="col-lg-4  card-hover">
   <div class="card" style="height: 100%; width:100%;">
     <img src="./images/python-1588143191.jpg" class="card" alt="...">
     <div class="card-body">
@@ -233,9 +209,7 @@
       <a href="#" class="btn btn-primary">view more</a>
     </div>
   </div>
-
       </div>
-
       <div class="col-lg-4  card-hover">
   <div class="card" style="height: 100%; width:100%;">
     <img src="./images/st-1588580359.jpg" class="card" alt="...">
@@ -262,7 +236,5 @@
     </div>
   </div>
 </div>
-
 </html>
-
 
