--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <div class="w-100" style="background-color: #5e068a;">
   <div class="row">
     <p style="color: white;">Have any questions?</p>
-    <p style="color: white; margin-left: 1000px;">contact@luminar technolab</p>
+    <p id style="color: white;">contact@luminar technolab</p>
   </div>
  </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -55,21 +55,23 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       </div>
-      <div class="col-lg-12 col-xs-12">
+      <div class="col-lg-12">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img style="height:600px;" src="./images/never-stop-learning-3653430_1280.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption text-start" style="top: 20vh">
-            <h1 class="fs-2% col-s-12">
+            <h1 class="fs-2% col-xs-12">
               Kerala's No.1 IT Finishing School<br />100% Placement Assistance
             </h1>
-            <p class="col-md-1 col-s-12" style="width: 65%">
+            <p class="col-md-1 col-xs-12" style="width: 65%">
               We at LUMINAR TECHNOLAB offers best software training and
               placement in emerging technologies like BIG DATA, Data Science,
               Machine Learning,PYTHON, Software Testing.
-            </p><br><br>
-            <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border-color: rgb(50, 4, 59);">view more</button>
-          </div>
+            </p>
+            <button id="a1" class="btn btn-lg btn-primary rounded-5 col-xs-12" style="background-color: #5e068a; border: none">
+              VIEW COURSES
+            </button>
+          </div><br>
           <div class="container mt-2">
             <button type="button" class="btn btn-lg btn-primary rounded-0 w-30px" data-bs-toggle="modal"
               data-bs-target="#exampleModal" style="background-color: #5e068a; border: none">
@@ -78,22 +80,22 @@
           </div>
         </div>
         
-        <div class="col-lg-12 col-xs-12">
+        <div class="col-lg-12 ">
           <div class="carousel-inner">
             <div class="carousel-item ">
               <img style="height:600px;" src="./images/WhatsApp Image 2023-07-09 at 23.24.21.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption text-start" style="top: 20vh">
-                <h1 class="fs-2% col-s-12">
+                <h1 class="fs-2% col-xs-12">
                   Data Science, ML &amp; AI<br />
                   Big Data - Hadoop &amp; Spark <br />
                   Python Data Science
                 </h1>
-                <p class="col-md-1 col-s-12" style="width: 65%">
+                <p class="col-md-1 col-xs-12" style="width: 65%">
                   We LUMINAR TECHNOLAB offers best software training and placement
                   in emerging technologies like Big Data, Hadoop, Spark,Data
                   Scince, Machine Learning, Deep Learning and AI.
-                </p><br><br>
-                <button class="btn btn-lg btn-primary rounded-5 col-s-1" style="background-color: #5e068a; border: none">
+                </p>
+                <button id="a2" class="btn btn-lg btn-primary rounded-5 col-xs-12 " style="background-color: #5e068a; border: none">
                   VIEW COURSES
                 </button>
               </div>
@@ -107,7 +109,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div>
+    </div><br>
     <div class="container mt-2">
       <button type="button" class="btn btn-lg btn-primary rounded-0 w-30px" data-bs-toggle="modal"
         data-bs-target="#exampleModal" style="background-color: #5e068a; border: none">
@@ -175,7 +177,7 @@
         Training & Selenium Training in Cochin, Kerala are designed in such a way to match with the current industry
         requirements. Our Vision is to provide 100% placements to students those who enroll with us for our specialized
         courses.</p>
-      <br> <button class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
+      <br> <button id="o1" class="btn btn-lg btn-primary rounded-5" style="background-color: #5e068a; border: none">
         lean more
       </button>
     </div>
