--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <div class="w-100" style="background-color: #5e068a;">
   <div class="row">
     <p style="color: white;">Have any questions?</p>
-    <p id style="color: white;">contact@luminar technolab</p>
+    <p id="l1" style="color: white;">contact@luminar technolab</p>
   </div>
  </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -63,12 +63,12 @@
             <h1 class="fs-2% col-xs-12">
               Kerala's No.1 IT Finishing School<br />100% Placement Assistance
             </h1>
-            <p class="col-md-1 col-xs-12" style="width: 65%">
+            <p class="col-xs-12" style="width: 65%">
               We at LUMINAR TECHNOLAB offers best software training and
               placement in emerging technologies like BIG DATA, Data Science,
               Machine Learning,PYTHON, Software Testing.
             </p>
-            <button id="a1" class="btn btn-lg btn-primary rounded-5 col-xs-12" style="background-color: #5e068a; border: none">
+            <button id="a1" class="btn btn-lg btn-primary rounded-5 col-xs-12 " style="background-color: #5e068a; border: none">
               VIEW COURSES
             </button>
           </div><br>
@@ -79,7 +79,7 @@
             </button>
           </div>
         </div>
-        
+      
         <div class="col-lg-12 ">
           <div class="carousel-inner">
             <div class="carousel-item ">
@@ -90,7 +90,7 @@
                   Big Data - Hadoop &amp; Spark <br />
                   Python Data Science
                 </h1>
-                <p class="col-md-1 col-xs-12" style="width: 65%">
+                <p class=" col-xs-12" style="width: 65%">
                   We LUMINAR TECHNOLAB offers best software training and placement
                   in emerging technologies like Big Data, Hadoop, Spark,Data
                   Scince, Machine Learning, Deep Learning and AI.
