--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
  <div class="w-100" style="background-color: #5e068a;">
   <div class="row">
-    <p style="color: white;">Have any questions?</p>
-    <p id="l1" style="color: white;">contact@luminar technolab</p>
+    <p style="color: white;">Have any questions? contact@ luminar technolab</p>
+
   </div>
  </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
